<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="error_sdk_title">SDK error</string>
    <string name="error_sdk_code_token">Session token is empty</string>
    <string name="error_sdk_code_1000">API Key is empty</string>
    <string name="error_sdk_code_1001">API Secret is empty</string>
    <string name="error_sdk_code_1002">Event Id is empty</string>

    <string name="error_network_title">Network error</string>
    <string name="error_network_message">Communication error with server</string>

    <string name="error_image_title">Image error</string>
    <string name="error_image_message">An error occured while processing picture</string>

    <string name="error_avatar_title">Image error</string>
    <string name="error_avatar_message">A picture is required</string>

    <string name="error_scan_title">Scan Error</string>
    <string name="error_scan_message">Could not scan</string>
    <string name="error_scan_message_differ_failed">Could not differ scan</string>

    <string name="progress_title">Loading</string>
    <string name="progress_message">Please wait...</string>

    <string name="error_title">Error</string>

    <string name="avatars_empty">No avatar available</string>

    <string name="share">Share on...</string>

    <string name="rationale_video_app">This app needs access to your camera and mic so you can perform video calls</string>
    <string name="rationale_ask_again">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>
    <string name="title_settings_dialog">Permissions Required</string>
    <string name="setting">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="buttonText">Click to begin please</string>

    <string name="chat_hint">Type your message...</string>

    <string name="users_count_text">%1$s/%2$s</string>

    <string name="fragment_users_title">%1$s Members</string>
    <string name="action_request_camera">Send a request for the Camera</string>
    <string name="action_request_mic">Send a request for the Microphone</string>
    <string name="action_request_screen">Send a request for the Screen Sharing</string>

    <string name="action_allow_user_to_share_his_camera">Allow user to share his camera</string>
    <string name="action_ask_user_to_share_his_camera">Ask user to share his camera</string>
    <string name="action_allow_user_to_share_his_microphone">Allow user to share his microphone</string>
    <string name="action_ask_user_to_share_his_microphone">Ask user to share his microphone</string>
    <string name="action_allow_user_to_share_his_screen">Allow user to share his screen</string>
    <string name="action_ask_user_to_share_his_screen">Ask user to share his screen</string>
    <string name="action_force_user_to_unpublish_screen">Force user to unpublish screen</string>
    <string name="action_force_user_to_unpublish_camera">Force user to unpublish camera</string>
    <string name="action_force_user_to_unpublish_microphone">Force user to unpublish microphone</string>
    <string name="action_kick_user">Kick %1$s from the live</string>

    <string name="user_action_mic">Microphone</string>
    <string name="user_action_mic_turn_off">Turn Off</string>
    <string name="user_action_mic_turn_on">Turn On</string>
    <string name="user_action_cam">Camera</string>
    <string name="user_action_cam_turn_off">Turn Off</string>
    <string name="user_action_cam_turn_on">Turn On</string>
    <string name="user_action_rotate">Rotate</string>
    <string name="user_action_rotate_cam">Your Camera</string>
    <string name="user_action_rotate_rear_cam">Rear Camera</string>
    <string name="user_action_rotate_front_cam">Front Camera</string>
    <string name="user_action_stop">Stop</string>
    <string name="user_action_stop_your_stream">Your Stream</string>

    <string name="demand_text_camera">Allow %1$s to share his camera</string>
    <string name="demand_text_microphone">Allow %1$s to share his microphone</string>
    <string name="demand_text_screen">Allow %1$s to share his screen</string>

    <string name="confirm_text_camera">Do you want to share your camera ?</string>
    <string name="confirm_text_microphone">Do you want to share your microphone ?</string>

    <string name="cancel_text">Your request was declined</string>

    <string name="button_deny">Decline</string>
    <string name="button_accept">Accept</string>
    <string name="button_ok">Ok</string>

    <string name="message_user_bot">Automatic message</string>
    <string name="message_user_joined">%1$s has joined the conversation</string>
    <string name="message_user_left">%1$s has left the conversation</string>
    <string name="message_user_stream_destroyed">%1$s\'s stream has been turned off</string>
    <string name="message_user_archive_started">Recording started</string>
    <string name="message_user_archive_stopped">Recording stopped</string>

</resources>
