<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background_white"
    android:layout_margin="70dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/user_action_mic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/element_margin"
                android:src="@drawable/user_action_mic" />

            <me.grantland.widget.AutofitTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lines="1"
                android:text="@string/user_action_mic"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/text_medium" />

            <me.grantland.widget.AutofitTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_action_mic_text"
                android:layout_marginBottom="@dimen/element_margin"
                android:gravity="center"
                android:lines="1"
                android:text="@string/user_action_mic_turn_off"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/text_small" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_action_camera"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/element_margin"
                android:src="@drawable/user_action_camera" />

            <me.grantland.widget.AutofitTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lines="1"
                android:text="@string/user_action_cam"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/text_medium" />

            <me.grantland.widget.AutofitTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_action_camera_text"
                android:layout_marginBottom="@dimen/element_margin"
                android:gravity="center"
                android:lines="1"
                android:text="@string/user_action_cam_turn_off"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/text_small" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/user_action_rotate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/element_margin"
                android:src="@drawable/user_action_rotate" />

            <me.grantland.widget.AutofitTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lines="1"
                android:text="@string/user_action_rotate"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/text_medium" />

            <me.grantland.widget.AutofitTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_action_rotate_text"
                android:layout_marginBottom="@dimen/element_margin"
                android:gravity="center"
                android:lines="1"
                android:text="@string/user_action_rotate_cam"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/text_small" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_action_stop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/element_margin"
                android:src="@drawable/user_action_stop" />

            <me.grantland.widget.AutofitTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lines="1"
                android:text="@string/user_action_stop"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/text_medium" />

            <me.grantland.widget.AutofitTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_action_stop_text"
                android:layout_marginBottom="@dimen/element_margin"
                android:gravity="center"
                android:lines="1"
                android:text="@string/user_action_stop_your_stream"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/text_small" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>